[gd_scene load_steps=9 format=2]

[ext_resource path="res://Engine/Components/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Engine/TurnEngine/TurnEngine.gd" type="Script" id=2]
[ext_resource path="res://Engine/TurnEngine/TurnEngineStartState.gd" type="Script" id=3]
[ext_resource path="res://Engine/TurnEngine/TurnEnginePlayTurnState.gd" type="Script" id=4]
[ext_resource path="res://Engine/TurnEngine/TurnEngineWaitingForNextTurnState.gd" type="Script" id=5]
[ext_resource path="res://Engine/TurnEngine/TurnEngineEndTurnState.gd" type="Script" id=6]
[ext_resource path="res://Engine/TurnEngine/TurnEngineInitState.gd" type="Script" id=7]
[ext_resource path="res://Engine/TurnEngine/TurnEngineEndGameState.gd" type="Script" id=8]

[node name="TurnEngine" type="Node"]
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Init" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="StartTurn" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="PlayTurn" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="EndTurn" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="WaitingForNextTurn" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="End" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[connection signal="state_changed" from="StateMachine" to="." method="_on_StateMachine_state_changed"]
